==> htibosch/freertos_plus_projects/plus/Framework/FreeRTOS-Plus-FAT/portable/MCU_PSOC6_M4/ff_sddisk.c <==
#include "ff_sddisk.h"
#include "ff_ioman.h"
#include "hw_config.h"
#define HUNDRED_64_BIT      100ULL
#define SECTOR_SIZE         512UL
#define PARTITION_NUMBER    0     /* Only a single partition is used. */
#define BYTES_PER_KB        ( 1024ull )
#define SECTORS_PER_KB      ( BYTES_PER_KB / 512ull )

BaseType_t FF_SDDiskDetect( FF_Disk_t * pxDisk )
{
    if( !pxDisk )
    {
        return false;
    }

    return sd_card_detect( pxDisk->pvTag );
}

FF_Disk_t * FF_SDDiskInit( const char * pcName )
{
    sd_card_t * pSD = sd_get_by_name( pcName );

    if( !pSD )
    {
        FF_PRINTF( "FF_SDDiskInit: unknown name %s\n", pcName );
        return NULL;
    }

    if( disk_init( pSD ) )
    {
        return pSD->ff_disks[ 0 ];
    }
    else
    {
        return NULL;
    }
}

BaseType_t FF_SDDiskMount( FF_Disk_t * pDisk )
{
    if( pDisk->xStatus.bIsMounted )
    {
        return FF_ERR_NONE;
    }

    /* FF_Error_t FF_Mount( FF_Disk_t *pxDisk, BaseType_t xPartitionNumber ); */
    FF_Error_t e = FF_Mount( pDisk, PARTITION_NUMBER );

    if( FF_ERR_NONE != e )
    {
        FF_PRINTF( "FF_Mount error: %s\n", FF_GetErrMessage( e ) );
    }
    else
    {
        pDisk->xStatus.bIsMounted = pdTRUE;
        Cy_GPIO_Write( BlueLED_PORT, BlueLED_NUM, 0 );
    }

    return e;
}

BaseType_t FF_SDDiskShowPartition( FF_Disk_t * pxDisk )
{
    FF_Error_t xError;
    uint64_t ullFreeSectors;
    uint32_t ulTotalSizeKB, ulFreeSizeKB;
    int iPercentageFree;
    FF_IOManager_t * pxIOManager;
    const char * pcTypeName = "unknown type";
    BaseType_t xReturn = pdPASS;

    if( pxDisk == NULL )
    {
        xReturn = pdFAIL;
    }
    else
    {
        pxIOManager = pxDisk->pxIOManager;

        FF_PRINTF( "Reading FAT and calculating Free Space\n" );

        switch( pxIOManager->xPartition.ucType )
        {
            case FF_T_FAT12:
                pcTypeName = "FAT12";
                break;

            case FF_T_FAT16:
                pcTypeName = "FAT16";
                break;

            case FF_T_FAT32:
                pcTypeName = "FAT32";
                break;

            default:
                pcTypeName = "UNKOWN";
                break;
        }

        FF_GetFreeSize( pxIOManager, &xError );

        ullFreeSectors = pxIOManager->xPartition.ulFreeClusterCount * pxIOManager->xPartition.ulSectorsPerCluster;

        if( pxIOManager->xPartition.ulDataSectors == ( uint32_t ) 0 )
        {
            iPercentageFree = 0;
        }
        else
        {
            iPercentageFree = ( int ) ( ( HUNDRED_64_BIT * ullFreeSectors + pxIOManager->xPartition.ulDataSectors / 2 )
                                        / ( ( uint64_t ) pxIOManager->xPartition.ulDataSectors ) );
        }

        ulTotalSizeKB = pxIOManager->xPartition.ulDataSectors / SECTORS_PER_KB;
        ulFreeSizeKB = ( uint32_t ) ( ullFreeSectors / SECTORS_PER_KB );

        /* It is better not to use the 64-bit format such as %Lu because it
         * might not be implemented. */
        FF_PRINTF( "Partition Nr   %8u\n", pxDisk->xStatus.bPartitionNumber );
        FF_PRINTF( "Type           %8u (%s)\n", pxIOManager->xPartition.ucType, pcTypeName );
        FF_PRINTF( "VolLabel       '%8s' \n", pxIOManager->xPartition.pcVolumeLabel );
        FF_PRINTF( "TotalSectors   %8lu\n", ( unsigned long ) pxIOManager->xPartition.ulTotalSectors );
        FF_PRINTF( "SecsPerCluster %8lu\n", ( unsigned long ) pxIOManager->xPartition.ulSectorsPerCluster );
        FF_PRINTF( "Size           %8lu KB\n", ( unsigned long ) ulTotalSizeKB );
        FF_PRINTF( "FreeSize       %8lu KB ( %d perc free )\n", ( unsigned long ) ulFreeSizeKB, iPercentageFree );
    }

    return xReturn;
}
